[project]
name = "the-chameleon"
version = "1.0.0"
description = "The Chameleon - Interactive Dice Game CLI"
readme = "README.md"
authors = [
    { name = "Sarthak Gupta", email = "sarthak.gupta@thefinancialist.co" },
]
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "taskipy>=1.14.1",
    "ty>=0.0.12",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.9.26"
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["main"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.taskipy.tasks]
install = "uv sync"
post_install = "pre-commit install"
test = "pytest"
test-cov = "pytest --cov --cov-report=term-missing --cov-report=html"
test-watch = "pytest-watch"
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
type-check = "ty check"
check = "task lint && task type-check && task test"
all = "task check"
help = { cmd = "task --list", help = "Shows this help message" }

[tool.ruff]
fix = true
indent-width = 4
target-version = "py314"
src = ["."]
exclude = ["venv", ".venv", ".vscode", ".cursor"]
line-length = 119

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
    "ALL"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Use of assert detected (OK in tests)
    "ANN201",  # Missing return type annotation (OK for test functions)
    "ANN001",  # Missing type annotation for function argument (OK for test mocks)
    "PLR2004",  # Magic value used in comparison (OK for test constants)
    "SLF001",  # Private member accessed (OK in tests)
    "SIM105",  # Use contextlib.suppress (try-except-pass is fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["main"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.docformatter]
wrap-summaries = 119
wrap-descriptions = 119
